# mva_snlp_canine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO  add_nli_results.sh  environment.yaml  pyproject.toml  run_nli_exps.sh  snlp-translation.ipynb
.github/workflows/: codecov.yml  create-diagram.yml  main.yml  quality.yml
configs/nli/: exp1.py  exp2.py
mva_snlp_canine/: __init__.py  utils.py
mva_snlp_canine/ner/: canine.py  mbert.py
mva_snlp_canine/nli/: augmented_dataset.py  create_new_config.py  dataset.py  default_training_args.json  defaults.py  evaluate_models.py  preprocess_dataset.py  run_experiment.py  tokenize_dataset.py  train_models.py  training.py  utils.py  visualise_results.py
mva_snlp_canine/nli/configs/: 100k_en.py  100k_fr.py  100k_zh_th.py  10k_fr.py  10k_zh.py  10k_zh_th.py  150k_en_de.py  200k_ar_tr.py  300k_all.py  300k_en.py  300k_fr.py  300k_zh_th.py  50k_eu_ru.py  test.py
mva_snlp_canine/nli/scripts/: preprocess_dataset.py  run_experiment.py  tokenize_dataset.py  train.py  train_models.py
ner_results/: conll2002_es.ipynb  conll2002_nl.ipynb  conll2003_en.ipynb  masakhaner_amh.ipynb  masakhaner_hau.ipynb  masakhaner_ibo.ipynb  masakhaner_kin.ipynb  masakhaner_lug.ipynb  masakhaner_luo.ipynb  masakhaner_pcm.ipynb  masakhaner_swa.ipynb  masakhaner_wol.ipynb  masakhaner_yor.ipynb
nli_results/100k_en/models/bert/: README.md  trainer_state.json
nli_results/100k_en/models/canine_c/: README.md  trainer_state.json
nli_results/100k_en/models/canine_s/: README.md  trainer_state.json
nli_results/100k_en/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/100k_fr/models/bert/: README.md  trainer_state.json
nli_results/100k_fr/models/canine_c/: README.md  trainer_state.json
nli_results/100k_fr/models/canine_s/: README.md  trainer_state.json
nli_results/100k_fr/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/100k_zh_th/models/bert/: README.md  trainer_state.json
nli_results/100k_zh_th/models/canine_c/: README.md  trainer_state.json
nli_results/100k_zh_th/models/canine_s/: README.md  trainer_state.json
nli_results/100k_zh_th/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/10k_fr/models/_bert/: README.md  trainer_state.json
nli_results/10k_fr/models/_canine_c/: README.md  trainer_state.json
nli_results/10k_fr/models/_canine_s/: README.md  trainer_state.json
nli_results/10k_fr/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/10k_zh/models/_canine_s/: README.md  trainer_state.json
nli_results/10k_zh_th/models/_bert/: README.md  trainer_state.json
nli_results/10k_zh_th/models/_canine_c/: README.md  trainer_state.json
nli_results/10k_zh_th/models/_canine_s/: README.md  trainer_state.json
nli_results/10k_zh_th/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/200k_ar_tr/models/_bert/: README.md  trainer_state.json
nli_results/200k_ar_tr/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/300k_all/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/300k_fr/results/: boxplot_metrics.html  boxplot_metrics_attacked.html
nli_results/images/: f1_avg_all_languages.tex  f1_avg_all_languages_pert.tex  f1_avg_train_languages.tex  f1_avg_train_languages_pert.tex
notebooks/: evaluation.ipynb  first_try.ipynb  fix_training.ipynb
scripts/: add_nli_results.sh  evaluate_attacks.sh  evaluate_nli_attacks.sh  evaluate_nli_exps.sh  extra_run.sh  nli_run_all.sh  run_nli_exps.sh  visualise_nli_results.sh
scripts/nli/: preprocessing.py  tokenize_dataset.py  train.py
scripts/nli/configs/: exp1.py
(+49 files in other folders)
