[tool.poetry]
name = "mva_snlp_canine"
version = "0.1.0"
description = "NLP project for the MVA course Speech and NLP"
authors = [
  "Gabriel Watkinson <gabriel.watkinson@ensae.fr>",
  "Josselin Dubois <dubois.josselin2000@gmail.com>",
  "Marine Astruc <marineastruc09@gmail.com>",
  "Javier Ramos-Gutiérrez <javier.ramos_gutierrez@ens-paris-saclay.fr>"
]
readme = "README.md"
license = "MIT"
packages = [{include = "mva_snlp_canine"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
transformers = "^4.26.1"
datasets = "^2.10.1"
lightning = "^2.0.0"
torch = "^2.0.0"
evaluate = "^0.4.0"
tensorboard = "^2.12.0"
accelerate = "^0.18.0"
plotly = "^5.14.1"
kaleido = "0.2.1"
nlpaug = "^1.1.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
pep8-naming = "^0.13.3"
black = {extras = ["jupyter"], version = "^23.1.0"}
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
poethepoet = "^0.18.1"
ipykernel = "^6.21.3"
ipywidgets = ">=7.0,<8.0"
nbqa = "^1.6.3"



[tool.poetry.scripts]
nli_process_data = 'mva_snlp_canine.nli.preprocess_dataset:main'
nli_tokenize_data = 'mva_snlp_canine.nli.tokenize_dataset:main'
nli_create_config = 'mva_snlp_canine.nli.create_new_config:main'
nli_run_experiment = 'mva_snlp_canine.nli.run_experiment:main'
nli_evaluate_experiment = 'mva_snlp_canine.nli.evaluate_models:main'
nli_visualise_results = 'mva_snlp_canine.nli.visualise_results:main'
nli_augmented_dataset = 'mva_snlp_canine.nli.augmented_dataset:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
float_to_top = true

[tool.flake8]
ignore = ['E203', 'E501', 'W503']
max-line-length = 100
count = true
docstring-convention = 'google'

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks]
init_dev = [
  { cmd = "poetry install --sync" },
  { cmd = "pre-commit install" },
]
torch_cuda = [
  { cmd = "poetry add numpy torch" },
  { cmd = "pip install torch --force-reinstall --extra-index-url https://download.pytorch.org/whl/cu117" },
]
